# xz-rs

./: Cargo.lock.msrv  Cargo.toml  README.md
.github/workflows/: main.yml  webassembly.yml
benches/: backend_comparison.rs
docs/: performance-workflow.md
examples/: bufread_trailing_probe.rs  qc_probe.rs  standard_files_probe.rs
liblzma-rs/: Cargo.toml
liblzma-rs-sys/src/: lib.rs
liblzma-rs/src/: lib.rs  types.rs
liblzma-rs/src/check/: check.rs  crc32_fast.rs  crc64_fast.rs  sha256.rs
liblzma-rs/src/common/: alone_decoder.rs  alone_encoder.rs  auto_decoder.rs  block_buffer_decoder.rs  block_buffer_encoder.rs  block_decoder.rs  block_encoder.rs  block_header_decoder.rs  block_header_encoder.rs  block_util.rs  common.rs  easy_buffer_encoder.rs  easy_decoder_memusage.rs  easy_encoder.rs  easy_encoder_memusage.rs  easy_preset.rs  file_info.rs  filter_buffer_decoder.rs  filter_buffer_encoder.rs  filter_common.rs  filter_decoder.rs  filter_encoder.rs  filter_flags_decoder.rs  filter_flags_encoder.rs  index.rs  index_decoder.rs  index_encoder.rs  index_hash.rs  lzip_decoder.rs  microlzma_decoder.rs  microlzma_encoder.rs  (+14 more)
perf-probe/: Cargo.toml
perf-probe/src/: main.rs
scripts/: compare_all_trimmed.sh  compare_api_workloads.sh  compare_backends.sh  compare_workloads.sh  inspect_codegen.sh  profile_backend.sh  run_root_test_bins.sh
src/: lib.rs  stream.rs
src/write/: auto_finish.rs
systest/: build.rs
tests/: sys_equivalence.rs
xz-core/: Cargo.toml
xz-core/src/: raw_alloc.rs
xz-sys/: Cargo.toml
xz-sys/src/: lib.rs
xz/src/: alloc.rs  types.rs
(+63 files in other folders)
