[package]
name = "perf-probe"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
xz-core = ["dep:xz-core"]
xz-sys = ["dep:xz-sys"]
liblzma-sys = ["dep:liblzma-sys"]

[dependencies]
liblzma-sys = { path = "../liblzma-sys", optional = true }
xz-core = { path = "../xz-core", optional = true }
xz-sys = { path = "../xz-sys", optional = true }
